[package]
name = "rust_lsp"
version = "0.2.0"
authors = ["Bruno Medeiros <bruno.do.medeiros@gmail.com>"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
melnorme_util = { version = "0.1.1", path = "subcrates/melnorme_util" }
melnorme_jsonrpc = { path = "subcrates/melnorme_json_rpc" }
log = "0.3.6"
serde = "0.8"
serde_json = "0.8"
languageserver-types = { version = "0.4.0", git = "https://github.com/gluon-lang/languageserver-types" }


[lib]
name = "rust_lsp"
path = "src/lib.rs"
