[package]
name = "dummy_lsp"
version = "0.1.0"
authors = ["Bruno Medeiros <bruno.do.medeiros@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
rust_lsp = { path = "../.." }
melnorme_util = { path = "../../subcrates/melnorme_util" }
melnorme_jsonrpc = { path = "../../subcrates/melnorme_json_rpc" }

[lib]
name = "example_ls"
path = "src/example_ls.rs"

[[bin]]
name = "dummy_lsp"
path = "src/main.rs"
test = false