[package]
name = "melnorme_jsonrpc"
version = "0.1.0"
authors = ["Bruno Medeiros <bruno.do.medeiros@gmail.com>"]

[dependencies]
melnorme_util = { path = "../melnorme_util", version = "0.1.0" }
log = "0.3.6"
serde = "0.8"
serde_json = "0.8"
futures = "0.1.3"

[dev-dependencies]
melnorme_util = { path = "../melnorme_util", features = ["test_utils"] }

[lib]
name = "melnorme_jsonrpc"
path = "src/jsonrpc.rs"
